fix scroll overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
